src/app/features/photos-library/components/photo-details/photo-details.component.scss
@use 'colors';

:host {
  display: block;
  height: 100%;
}

.detail-wrapper {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.photo-container {
  flex: 1;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;

  img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
    border-radius: 16px;
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
    border: 1px solid colors.$border-color;
  }
}

.actions {
  padding-bottom: 1rem;
}

